--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,33 +3,7 @@
 ---
 
 @import "base";
-
-// Color variables
-$site-theme-color: #003068;
-$site-theme-color-dark: #0b2544;
-$site-theme-ox: #002147;
-$site-theme-color-old: #6091ba;
-$color_1: #444;
-$color_3: #365d7e;
-$color_4: #fff;
-$color_5: #27435a;
-$color_6: #999;
-$color_7: rgba(255, 255, 255, 0.18);
-$color_8: #777777;
-$color_9: #dce7f0;
-$color_10: #dcdcdc;
-$color_11: #767676;
-$color_12: #84aac9;
-$color_13: #a9a9a9;
-$color_14: #aaaaaa;
-$color_15: #2f506c;
-$color_16: #f5f5f5;
-$color_17: #666;
-$color_18: #e8e8e8;
-$color_19: #E14B39;
-$font-family_1: 'Roboto', arial, sans-serif;
-$font-family_2: FontAwesome;
-$font-family_3: 'Roboto', arial, sans-serif;
+@import "vars";
 
 /*
  * Template Name: College Green - Responsive Website Template for Education & Training
@@ -53,6 +27,7 @@ $font-family_3: 'Roboto', arial, sans-serif;
 /* Medium devices (desktops, 992px and up) */
 /* Sticky Footer */
 /* Large devices (large desktops, 1200px and up) */
+
 html {
   height: 100%;
 }
@@ -1035,7 +1010,7 @@ ul.custom-list-style {
   }
 
   .header-main {
-    padding: 20px 30px;
+    padding: 20px $header-horizontal-padding;
     text-align: center;
     width: auto;
 
@@ -1269,9 +1244,11 @@ ul.custom-list-style {
     height: 50px;
     &.flex-next {
       background: url(../images/misc/right-arrow.png) no-repeat 0 0;
+      right: 0;
     }
     &.flex-prev {
       background: url(../images/misc/left-arrow.png) no-repeat 0 0;
+      left: 0;
     }
   }
 
@@ -2280,6 +2257,10 @@ ul.custom-list-style {
       -webkit-box-shadow: 0;
       -moz-box-shadow: 0;
       box-shadow: 0;
+
+      &.in {
+        margin-bottom: 40px;
+      }
     }
     .nav {
       .nav-item.active {
